--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <allure-java-commons.version>2.13.6</allure-java-commons.version>
         <rest-assured.version>4.3.2</rest-assured.version>
         <icu4j.version>72.1</icu4j.version>
+        <lombok.version>1.18.24</lombok.version>
     </properties>
 
 
@@ -109,6 +110,14 @@
             <groupId>com.ibm.icu</groupId>
             <artifactId>icu4j</artifactId>
             <version>${icu4j.version}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
         </dependency>
 
 
